fixed alignment of navbar dropdown

--- a/bruin-fitness/public/styles/style.css
+++ b/bruin-fitness/public/styles/style.css
@@ -9,12 +9,21 @@ body {
   color: #222;
 }
 
+/*-- Max-width Container For Elements
+other than navbar, carousel, banner & footer --*/
+.wrapper {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 0.5rem;
+  overflow: hidden;
+}
+
 /* rem =root font size
 1 rem = 16 pixels
 extra padding to the vabar box itself
 */
 .navbar {
-  padding: 0.8rem;
+  padding: unset;
 }
 
 /* add padding to each of the nav bar list items*/
@@ -24,6 +33,7 @@ extra padding to the vabar box itself
 
 .nav-link {
   font-size: 1.1em !important;
+  padding: 1.2rem;
 }
 
 .carousel-inner img {
@@ -143,7 +153,10 @@ footer a {
     opacity: 0;
     visibility: hidden;
     transition: 0.3s;
-    margin-top: 0;
+    background-color: #f8f9fa;
+    margin-top: 0 !important;
+    border-radius: 0;
+    z-index: 1000;
   }
   .navbar .dropdown-menu.fade-down {
     top: 80%;
@@ -159,6 +172,11 @@ footer a {
     visibility: visible;
     top: 100%;
     transform: rotateX(0deg);
+  }
+  .dropdown-menu {
+    margin-top: 0 !important;
+    border-radius: 0;
+    z-index: 1000;
   }
 }
 /* ============ desktop view .end// ============ */
@@ -279,3 +297,14 @@ Large (lg) devices (desktops, 992px and up)
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
+
+/*-- Don't modify waypoints CSS below,
+this is required for waypoints to work --*/
+.os-animation {
+  opacity: 0;
+  margin: 0 !important;
+  max-width: 100%;
+}
+.os-animation.animated {
+  opacity: 1;
+}
